manifest/objects/ALTF__Relationship_Map_Persona__c.object
<CustomObject>
    <fields>
        <fullName>ALTF__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relationship Map Personas</relationshipLabel>
        <relationshipName>Relationship_Map_Personas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ALTF__AltifyId__c</fullName>
        <description>An external ID used for Altify</description>
        <externalId>true</externalId>
        <label>AltifyId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ALTF__ConcatenatedFields__c</fullName>
        <formula>CASESAFEID(ALTF__Account__c) &amp; IF(ISBLANK(ALTF__Opportunity__c), &apos;NULL&apos;, CASESAFEID(ALTF__Opportunity__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ConcatenatedFields</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Opportunity__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Relationship Map Personas</relationshipLabel>
        <relationshipName>Relationship_Map_Personas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Persona__c</fullName>
        <label>Persona</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ALTF__Altify_Personas</valueSetName>
        </valueSet>
    </fields>
    <label>Altify Relationship Map Persona</label>
    <nameField>
        <label>Relationship Map Persona Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Altify Relationship Map Personas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>